# d1

./: .env  .env.server.example  .gitignore  Cargo.toml  README.md  create_module.json  example.js  module_simple.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain
cli/: Cargo.toml
crates/api/: Cargo.toml  deploy.rs  lib.rs
crates/api_server/: Cargo.toml  lib.rs  schema.sql  server.rs  worker.rs
crates/api_server/examples/projects/1234567/api/: foo.js
crates/api_server/examples/projects/1234567/functions/: foo.js
crates/api_server/examples/projects/1234567/functions/__output/: foo.js  meta.json
crates/api_server/examples/tenants/1234567/api/: foo.js
crates/cli/: Cargo.toml  dev.rs  main.rs  package.json
crates/client/: Cargo.toml  deploy.rs  dev.rs  main.rs  package.json
crates/control_plane/: Cargo.toml  esm_parser.rs  lib.rs  route_builder.rs  schema.hcl  seed.sql
crates/control_plane/plugin_data/schema/: create_table.js
crates/core/: Cargo.toml  api.rs  deploy.rs  esm_parser.rs  lib.rs  plugin.rs  project.rs  route_builder.rs
crates/core/code/: control.rs  esm_parser.rs  mod.rs
crates/core/deploy/: cache.rs  control.rs  data.rs  mod.rs
crates/core/env/: mod.rs  var.rs  var_list.rs
crates/core/env_vars/: mod.rs  var.rs  var_list.rs
crates/core/plugin_data/schema/: alter_table.js  api.js  ddl.js  drop_table.js  rename_table.js
crates/core/sql/: ddl.rs  mod.rs
crates/core/tenants/: deploy.rs  log.rs  mod.rs
crates/core/tenants/sql/: ddl.rs  dml.rs  mod.rs
crates/core/tests/: test_code_deploy.rs  test_deploy.rs  test_plugin_deploy.rs
crates/core/tests/common/: mod.rs
crates/core/tests/server/cljb3ovlt0002e38vwo0xi5ge/926/: __registry.js
crates/core/tests/server/cljb3ovlt0002e38vwo0xi5ge/926/functions/: hello.js  hello2.js
crates/data_plane/: Cargo.toml  cache.rs  deployment.rs  lib.rs  router.rs  worker.rs
crates/db/: Cargo.toml  control.rs  lib.rs  mysql.rs  mysql_simple.rs  mysql_sqlx.rs  sqlite.rs  tenant.rs  tenants.rs
crates/db/deprecated/: dml.rs  mysql_simple.rs  types.rs
crates/db/tenants/: ddl.rs  dml.rs  execute.rs  mod.rs  pool.rs
crates/isolate_runtime/: Cargo.toml  db.rs  db_ops.rs  lib.rs  log.rs  module_loader.rs  permissions.rs
crates/isolate_runtime/benches/: create_isolate.rs
crates/isolate_runtime/examples/projects/7ce52fdc14b16017/: bar.js
crates/isolate_runtime/js/: 00_bootstrap.js  01_db.js  02_log.js
crates/isolate_runtime/tests/: basic_test.rs  test_runtime.rs
crates/isolate_runtime/tests/data/000000000000_schema_dev/3/: __registry.js
crates/isolate_runtime/tests/data/000000000000_schema_dev/3/functions/: api.js
crates/isolate_runtime/tests/data/8nvcym53y8d2/: private.js
crates/isolate_runtime/tests/data/8nvcym53y8d2/99/: bar.js  log.js  run_ddl.js  run_query.js
crates/isolate_runtime/tests/data/cljb3ovlt0002e38vwo0xi5ge/99/: bench.js  load_private.js  run_query.js
crates/server/: .env.example  Cargo.toml  api_builder.rs  command.rs  contorl_plane.rs  control_plane.rs  cp.rs  lib.rs  main.rs  package.json  server.rs  sqlx-data.json  worker.rs
crates/server/deprecated/: control_plane.rs  lib.rs  server.rs  worker.rs
crates/server/examples/projects/1234567/: README.md
crates/server/examples/projects/1234567/functions/: foo.js
crates/server/examples/projects/1234567/functions/__output/: foo.js  meta.json
crates/server/examples/projects/1234567/functions/__output/foo/: foo.js
crates/server/examples/projects/1234567/functions/foo/: foo.js
crates/server/examples/projects/1234567/lib/: hello.js
crates/server/tests/: basic_test.rs  test_server.rs
crates/server/tests/basic_test/functions/: bar.js  foo.js
crates/server/tests/basic_test/user_home/alice/functions/: bar.js  foo.js
crates/server/tests/basic_test/user_home/plugins/test_plugin/functions/: api.js
crates/server/tests/deploy_bad_code/functions/: foo.js
crates/table_api/: lib.rs  row.rs
crates/table_api/catalog/: mod.rs
crates/table_api/expr/: scalar.rs
crates/utils/: Cargo.toml  lib.rs
custom_api/: Cargo.toml
examples/deprecated/: table_rules.js
examples/mvp_goal/darx_server/: README.md  schema.hcl
examples/mvp_goal/darx_server/api/protected/: comment.js  post.js
examples/mvp_goal/darx_server/api/public/: comment.js  comment_orm.js  post.js
examples/mvp_goal/darx_server/db_func/: comment.js  post.js
examples/mvp_goal/darx_server/functions/: comment.js  comment_orm.js  post.js  post_orm.js
examples/mvp_goal/darx_server/functions/foo/: foo.js
examples/mvp_goal/darx_server/migrations/: 20230527144746.sql  atlas.sum
examples/mvp_goal/darx_server/table_api/: index.js  rule.js  rules.js
examples/tenants/1234567/api/: bar.js  foo.js
json_api/: module_db.json  prepare_deploy.json
migration/src/: m20220101_000001_create_table.rs
plugins/schema/functions/: api.js
plugins/table/functions/: api.js
runtime/: Cargo.toml  db.rs  lib.rs  module_loader.rs  permissions.rs
runtime/examples/: simple.js  simple.rs
runtime/examples/tenants/7ce52fdc14b16017/: foo.js  load_private.js  run_query.js
runtime/js/: 01_db.js  bootstrap.js
src/: main.rs  server.rs  worker.rs
src/api_mgr/: mod.rs
src/isolate_runtime/: db.rs  mod.rs
src/runtime/: db.rs  mod.rs
src/table_api/catalog/: schema.rs
src/table_api/examples/: main.rs
src/table_api/expr/: mod.rs
src/utils/: mod.rs
table_api/: Cargo.toml  list_entity.rs  row.rs
table_api/catalog/: schema.rs
table_api/examples/: main.rs
table_api/expr/: rel.rs
tmp/: bootstrap.js  example.js
types/: Cargo.toml  lib.rs
