[workspace]
members = [
    "crates/isolate_runtime",
    "crates/cli",
    "crates/server",
    "crates/utils",
    "crates/api"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
darx_isolate_runtime = { path = "./crates/isolate_runtime" }
darx_server = { path = "./crates/server" }
darx_db = { path = "./crates/db" }
darx_utils = { path = "./crates/utils" }
darx_api = {path = "./crates/api" }


# Deno related crates from v1.32.3
# https://github.com/denoland/deno/blob/v1.32.3/Cargo.toml
deno_core = { version = "= 0.179.0" }
deno_console = {version = "= 0.97.0" }
deno_crypto = { version = "= 0.111.0" }
deno_fetch = { version = "= 0.121.0" }
deno_url = {version = "= 0.97.0"}
deno_web = {version = "= 0.128.0"}
deno_webidl = { version = "= 0.97.0"}
deno_tls = { version = "= 0.84.0" }

clap = { version = "4.1.8", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
axum = { version = "0.6.18"}
#todo: rusqlite is sync, we might need async.
rusqlite = { version = "0.29.0", features = ["bundled"] }
mysql_async = { version = "0.32" }

async-trait = { version = "0.1.68" }
anyhow = { version = "1"}
thiserror = { version = "1" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
serde = {version = "1.0.157", features = ["derive"]}
serde_json = { version = "1.0", features = ["raw_value"] }
notify = {version = "6.0.0", default-features = false, features = ["macos_kqueue"]}
notify-debouncer-mini = {version = "0.3.0"}
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json"] }
dotenv = { version = "0.15.0" }
redis = { version = "0.23.0", default-features = false, features = ["tokio-rustls-comp"] }
dashmap = { version = "5.4.0" }
rust-s3 = { version = "0.33" }
once_cell = { version = "1.18.0" }


