[package]
name = "table_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
axum = { version = "0.6"}
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "mysql", "offline"]}
anyhow = { version = "1"}
thiserror = { version = "1"}
futures = { version = "0.3" }
serde = {version = "1.0.157", features = ["derive"]}
