[package]
name = "table_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
serde.workspace = true

darx_datum.workspace = true
