[package]
name = "darx_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "darx_api"
path = "lib.rs"

[dependencies]
darx_db.workspace = true
serde.workspace = true
serde_json.workspace = true
actix-web.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true