[package]
name = "darx"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "darx"
path = "main.rs"

[dependencies]
darx_server.workspace = true
darx_api.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
notify.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true