[package]
name = "darx_client"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "darx"
path = "main.rs"

[dependencies]
darx_core.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true