[package]
name = "darx_control_plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "darx_control_plane"
path = "lib.rs"

[dependencies]
anyhow.workspace = true
actix-web.workspace = true
tracing-actix-web.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
tracing.workspace = true
nanoid.workspace = true
reqwest.workspace = true
handlebars.workspace = true
serde.workspace = true
serde_json.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
darx_api.workspace = true
