[package]
name = "darx_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "darx_core"
path = "lib.rs"

[dependencies]
darx_utils.workspace = true
darx_db.workspace = true
darx_isolate_runtime.workspace = true

deno_core.workspace = true

serde.workspace = true
serde_json.workspace = true
actix-web.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-recursion.workspace = true
sqlx.workspace = true
nanoid.workspace = true
handlebars.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
once_cell.workspace = true
dashmap.workspace = true
patricia_tree.workspace = true
arrayvec.workspace = true
sea-query.workspace = true

[dev-dependencies]
serial_test.workspace = true
