[package]
name = "darx_data_plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "darx_data_plane"
path = "lib.rs"

[dependencies]
darx_utils.workspace = true
darx_isolate_runtime.workspace = true
darx_db.workspace = true
darx_core.workspace = true

deno_core.workspace = true

actix-web.workspace = true
tracing-actix-web.workspace = true
actix-cors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
futures-util.workspace = true
dashmap.workspace = true
rust-s3.workspace = true
once_cell.workspace = true
tracing.workspace = true
arrayvec.workspace = true
patricia_tree.workspace = true
handlebars.workspace = true