[package]
name = "darx_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "darx_db"
path = "lib.rs"

[dependencies]
darx_utils.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
sqlx.workspace = true
futures.workspace = true
futures-util.workspace = true
once_cell.workspace = true
dashmap.workspace = true

