[package]
name = "darx_server"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "darx-server"
path = "main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

darx_data_plane.workspace = true
darx_control_plane.workspace = true