[package]
name = "darx_server"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "darx-server"
path = "main.rs"

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true

darx_core.workspace = true
darx_data_plane.workspace = true
darx_control_plane.workspace = true
darx_utils.workspace = true

[dev-dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true